// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div
  class="MuiFormControl-root-1 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-13"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with adornment start 1`] = `
<div
  class="MuiFormControl-root-1 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <div
      class="MuiInputAdornment-root-30 MuiInputAdornment-positionStart-31"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="search"
        class="svg-inline--fa fa-search fa-w-16 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 512 512"
      >
        <path
          fill="currentColor"
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="MuiInput-input-13"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with label 1`] = `
<div
  class="MuiFormControl-root-1 sc-bdVaJa faWPZi"
>
  <label
    class="MuiFormLabel-root-23 MuiInputLabel-root-18 MuiInputLabel-formControl-19 MuiInputLabel-animated-22"
    data-shrink="false"
  >
    label
  </label>
  <div
    class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-13"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with placeholder 1`] = `
<div
  class="MuiFormControl-root-1 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-13"
      placeholder="placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;
